CRUD actions all work
- on delete removes canvas
- update works
  - working to recreate drawing
- create and index all work properly
  - need to assign instant load on images

  SideNote:
  - test to deploy to GitHub

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-auth-template",
-  "homepage": "https://github.io/clark-rob/vango-client",
+  "homepage": "https://clark-rob.github.io/vango-client/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
