--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
@@ -54,9 +55,10 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "make-standard": "eslint --fix .",
-    "nag": "eslint .",
-    "deploy": "sh scripts/deploy.sh"
+    "nag": "eslint ."
   },
   "jest": {
     "collectCoverageFrom": [
